--- a/Cart.html
+++ b/Cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <script src="https://kit.fontawesome.com/ed954dc3e6.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./Home-Page.html">
+    <link rel="stylesheet" href="./index.html">
     <link rel="stylesheet" href="./Products.html">
     <link rel="stylesheet" href="./About.html">
     <link rel="stylesheet" href="./Contact.html">
@@ -103,7 +103,7 @@
 
         <div class="container">
 
-            <a href="./Home-Page.html" class="navbar-brand fw-bold">Ecommerce</a>
+            <a href="./index.html" class="navbar-brand fw-bold">Ecommerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
                 aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -112,7 +112,7 @@
 
             <div class="collapse navbar-collapse" id="navMenu">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="./Home-Page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./Products.html">Products</a></li>
                     <li class="nav-item"><a class="nav-link" href="./About.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="./Contact.html">Contact</a></li>
@@ -237,7 +237,7 @@
         <p>Made with ❤️ by Harinathreddy K</p>
     </footer>
 
-    <script src="./Home-Page.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
